--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,19 +28,17 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+
+
   cupertino_icons: ^1.0.2
+  curved_navigation_bar: ^1.0.3
+  
   flutter:
     sdk: flutter
   get: ^4.6.6
-  http: ^1.1.2
+  http: 1.1.0
 
 dev_dependencies:
-
-  # The "flutter_lints" package below contains a set of recommended lints to
-  # encourage good coding practices. The lint set provided by the package is
-  # activated in the `analysis_options.yaml` file located at the root of your
-  # package. See that file for information about deactivating specific lint
-  # rules and activating additional ones.
   flutter_lints: ^2.0.0
   flutter_test:
     sdk: flutter
@@ -71,7 +69,7 @@ flutter:
     - family: campus
       fonts:
         - asset: assets/fonts/CAMPUS PERSONAL USE.ttf
-        
+
     - family: vintage
       fonts:
         - asset: assets/fonts/VintageKing.ttf
