--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,25 +4,47 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
+
         {
-            "name": "flutter_application_1",
-            "cwd": "Users\\youss\\Desktop\\flutter_application_1",
+            "name": "LocalFinderzzz",
+            "cwd": "C:\\LocalFinderzzz",
             "request": "launch",
             "type": "dart"
         },
         {
-            "name": "flutter_application_1 (profile mode)",
-            "cwd": "Users\\youss\\Desktop\\flutter_application_1",
+            "name": "LocalFinderzzz (profile mode)",
+            "cwd": "C:\\LocalFinderzzz",
             "request": "launch",
             "type": "dart",
             "flutterMode": "profile"
         },
         {
-            "name": "flutter_application_1 (release mode)",
-            "cwd": "Users\\youss\\Desktop\\flutter_application_1",
+            "name": "LocalFinderzzz (release mode)",
+            "cwd": "C:\\LocalFinderzzz",
             "request": "launch",
             "type": "dart",
             "flutterMode": "release"
         }
+
+        // {
+        //     "name": "flutter_application_1",
+        //     "cwd": "Users\\youss\\Desktop\\flutter_application_1",
+        //     "request": "launch",
+        //     "type": "dart"
+        // },
+        // {
+        //     "name": "flutter_application_1 (profile mode)",
+        //     "cwd": "Users\\youss\\Desktop\\flutter_application_1",
+        //     "request": "launch",
+        //     "type": "dart",
+        //     "flutterMode": "profile"
+        // },
+        // {
+        //     "name": "flutter_application_1 (release mode)",
+        //     "cwd": "Users\\youss\\Desktop\\flutter_application_1",
+        //     "request": "launch",
+        //     "type": "dart",
+        //     "flutterMode": "release"
+        // }
     ]
 }
