--- a/.gitignore
+++ b/.gitignore
@@ -19,7 +19,9 @@ migrate_working_dir/
 # The .vscode folder contains launch configuration and tasks you configure in
 # VS Code which you may wish to be included in version control, so this line
 # is commented out by default.
+# Ignore .vscode directory
 .vscode/
+
 
 # Flutter/Dart/Pub related
 **/doc/api/
@@ -31,6 +33,7 @@ migrate_working_dir/
 .pub-cache/
 .pub/
 /build/
+
 
 # Symbolication related
 app.*.symbols
