--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,15 +28,16 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
-
-
+  animated_splash_screen: ^1.3.0
   cupertino_icons: ^1.0.2
   curved_navigation_bar: ^1.0.3
-  
   flutter:
     sdk: flutter
+  flutter_screenutil: ^5.9.0
+  fluttertoast: ^8.2.4
   get: ^4.6.6
   http: 1.1.0
+  video_player: ^2.8.1
 
 dev_dependencies:
   flutter_lints: ^2.0.0
@@ -55,6 +56,8 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/
+    - assets/images/locaal_moot.png
+    - assets/videos/
   #   - images/a_dot_ham.jpeg
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
