haanet be3on ellah

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   fluttertoast: ^8.2.4
   get: ^4.6.6
   http: 1.1.0
+  popover: ^0.2.8+2
   video_player: ^2.8.1
 
 dev_dependencies:
