--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ environment:
 # versions available, run `flutter pub outdated`.
 dependencies:
   animated_splash_screen: ^1.3.0
+  chips_choice_null_safety: ^2.0.6
   cupertino_icons: ^1.0.2
   curved_navigation_bar: ^1.0.3
   flutter:
